--- a/_templates/global/locale/it/LC_MESSAGES/django.po
+++ b/_templates/global/locale/it/LC_MESSAGES/django.po
@@ -7,16 +7,16 @@ msgid ""
 msgstr ""
 "Project-Id-Version: trad_orsee\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2016-01-14 14:48+0100\n"
-"PO-Revision-Date: 2016-01-14 14:51+0100\n"
+"POT-Creation-Date: 2016-01-28 13:57+0100\n"
+"PO-Revision-Date: 2016-01-28 13:56+0100\n"
 "Last-Translator: \n"
 "Language-Team: dome\n"
+"Language: Italian\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
 "X-Generator: Poedit 1.5.4\n"
-"Language: Italian\n"
 
 #: Feedback.html:6
 #, python-format
@@ -25,6 +25,9 @@ msgid ""
 "\n"
 "Soluzione alla Domanda di comprensione %(num_q)s di %(total_q)s\n"
 msgstr ""
+"\n"
+"\n"
+"Soluzione alla Domanda di comprensione %(num_q)s di %(total_q)s\n"
 
 #: Instructions.html:4
 msgid "Instructions"
@@ -32,20 +35,41 @@ msgstr "Istruzioni"
 
 #: Instructions.html:6
 msgid ""
-"<p> For your convenience, these instructions (or a short version of them) "
-"will remain available to you on all subsequent screens of this activity. </p>"
-msgstr ""
 "<p> Per comodità le istruzioni (o una loro sintesi) rimarranno disponibili "
-"in tutte le successive schermate.</p>"
+"in tutte le successive schermate. </p>"
+msgstr "<p> bla bla bla </p>"
 
 #: Question.html:10
 #, python-format
 msgid ""
 "\n"
-"Domanda di Comprensione %(num_q)s di %(total_q)s\n"
-"<!--Understanding question %(num_q)s of %(total_q)s-->\n"
+"\n"
+"Understanding Question %(num_q)s of %(total_q)s\n"
 msgstr ""
+"\n"
+"\n"
+"Domanda di Comprensione %(num_q)s di %(total_q)s\n"
 
 #: ResultsTable.html:6
 msgid "Results"
 msgstr "Risultati"
+
+#: Short_Instructions.html:4
+msgid "Short Instructions"
+msgstr "Sintesi delle Istruzioni"
+
+#: Short_Instructions.html:8
+msgid ""
+"Per your convenience these instructions will remain available to you on all "
+"subsequent screens of this activity"
+msgstr ""
+"<p> Per comodità queste istruzioni rimarranno disponibili in tutte le "
+"successive schermate.</p>"
+
+#: Short_Instructions.html:12
+msgid ""
+"Per comodità queste istruzioni rimarranno disponibili in tutte le successive "
+"schermate."
+msgstr ""
+"Per comodità queste istruzioni rimarranno disponibili in tutte le successive "
+"schermate."
