--- a/welcome_choice/locale/it/LC_MESSAGES/django.po
+++ b/welcome_choice/locale/it/LC_MESSAGES/django.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2016-01-27 17:08+0100\n"
+"POT-Creation-Date: 2016-02-11 10:05+0100\n"
 "PO-Revision-Date: 2016-01-27 17:08+0100\n"
 "Last-Translator: \n"
 "Language-Team: dome\n"
@@ -18,11 +18,11 @@ msgstr ""
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
 "X-Generator: Poedit 1.5.4\n"
 
-#: templates/welcome_choice/InputKind.html:10
+#: welcome_choice/templates/welcome_choice/InputKind.html:10
 msgid "Please insert the 3-Digit code you received from the organisers."
 msgstr "Inserisci il codice numerico ricevuto dagli organizzatori."
 
-#: templates/welcome_choice/InputKind.html:14
+#: welcome_choice/templates/welcome_choice/InputKind.html:14
 msgid ""
 "<p>In order for the experiment to unwind regularly and to receive the "
 "payment it is very important to insert the code correctly. </p> <p>Ask the "
@@ -33,20 +33,20 @@ msgstr ""
 "pagamento. </p><p>In caso di dubbi si prega di rivolgersi agli organizzatori."
 "</p>"
 
-#: templates/welcome_choice/InputKind.html:22
+#: welcome_choice/templates/welcome_choice/InputKind.html:22
 msgid "Insert the code you received."
 msgstr "Inserisci il numero ricevuto."
 
-#: templates/welcome_choice/InputKind.html:24
+#: welcome_choice/templates/welcome_choice/InputKind.html:24
 msgid "Please insert the code again."
 msgstr "Per sicurezza inserisci nuovamente il numero ricevuto."
 
-#: templates/welcome_choice/Welcome.html:6
+#: welcome_choice/templates/welcome_choice/Welcome.html:6
 msgid "Welcome"
 msgstr "Benvenuto"
 
-#: templates/welcome_choice/Welcome.html:21
-#, python-format
+#: welcome_choice/templates/welcome_choice/Welcome.html:21
+#, fuzzy, python-format
 #| msgid ""
 #| "We are happy to welcome you to this experiment. Please read the following "
 #| "instructions carefully. During the experiment it is forbidden to "
@@ -62,42 +62,43 @@ msgstr "Benvenuto"
 #| "the session. You will be asked to sign an invoice comprising your payment "
 #| "and the donation to the charity.</p> <p> The experiments includes %(n)s "
 #| "different activities to be carried out on the computer and a brief final "
-#| "survey on paper. The choices you will take on each activity will have no "
+#| "survey on paper. The choices you will make in each activity will have no "
 #| "influence on neither previous nor following activities. The earnings "
-#| "accrued within each activities will be notified to you only at the end of "
-#| "the experiment. </p> <p> <strong>Each activity allows to earn point which "
-#| "are converted to real money at the rate of %(tasso)s points for 1£. </"
-#| "strong> </p> <p> It is important to be aware that all your decisions and "
-#| "earnings are strictly private and anonymous. The experimenters will study "
-#| "the data pertaining to the choices made today without being able to link "
-#| "them to the actual identity of the participants. At the same time you "
-#| "will be paid by the administrative staff, who will have no access to the "
-#| "data concerning the choices that determined your earnings."
+#| "accrued within each activity will be notified to each participant, only "
+#| "at the end of the experiment. </p> <p> <strong>Each activity allows to "
+#| "earn points which are converted to real money at the rate of %(tasso)s "
+#| "points for 1£. </strong> </p> <p> It is important to be aware that all "
+#| "your decisions and earnings are strictly private and anonymous. The "
+#| "experimenters will study the data pertaining to the choices made today "
+#| "without being able to link them to the actual identity of the "
+#| "participants. At the same time you will be paid by the administrative "
+#| "staff, who will have no access to the data concerning the choices that "
+#| "determined your earnings."
 msgid ""
-"We are happy to welcome you to this experiment. Please read the following "
+"We are pleased to welcome you to this experiment. Please read the following "
 "instructions carefully. During the experiment it is forbidden to communicate "
 "with other participants. Questions should be addressed to the organisers "
-"only.</p> <p> Taking part in this experiment you can earn money. The exact "
-"amount you will earn depends on your and the other participants' choices. At "
-"the end of the session, the amount will be paid to you in cash and in "
-"private. During the experiment you may also contribute to the charity you "
-"have chosen during your identification. The corresponding amount, arising "
-"from your own and other participants' choices will formally be included in "
-"your invoice, but it will be immediately donated online to the charity of "
-"your choice after the end of the session. You will be asked to sign an "
-"invoice comprising your payment and the donation to the charity.</p> <p> The "
-"experiments includes %(n)s different activities to be carried out on the "
-"computer and a brief final survey on paper. The choices you will make in "
-"each activity will have no influence on neither previous nor following "
-"activities. The earnings accrued within each activity will be notified to "
-"each participant, only at the end of the experiment. </p> <p> <strong>Each "
-"activity allows to earn points which are converted to real money at the rate "
-"of %(tasso)s points for 1£. </strong> </p> <p> It is important to be aware "
-"that all your decisions and earnings are strictly private and anonymous. The "
-"experimenters will study the data pertaining to the choices made today "
-"without being able to link them to the actual identity of the participants. "
-"At the same time you will be paid by the administrative staff, who will have "
-"no access to the data concerning the choices that determined your earnings."
+"only.</p> <p> You can earn money by taking part in this experiment. The "
+"exact amount you will earn depends on your and the other participants' "
+"choices. At the end of the session, the amount will be paid to you in cash "
+"in private. During the experiment you may also contribute to the charity you "
+"have previously chosen. The corresponding amount, arising from your own and "
+"other participants' choices will be included in your invoice, but it will be "
+"immediately donated online to the charity of your choice at the end of the "
+"session. You will be asked to sign an invoice for your payment and charity "
+"donation.</p> <p> The experiments includes %(n)s different activities to be "
+"carried out on the computer and a brief final survey. The choices you make "
+"in each activity have no influence on either previous or subsequent "
+"activities in this experiment. The earnings accrued within each activity "
+"will be notified to each participant, only at the end of the experiment. </"
+"p> <p> <strong>Each activity allows you to earn points which are converted "
+"to real money at the rate of 1£ for every %(tasso)s points. </strong> </p> "
+"<p> It is important to be aware that all your decisions and earnings are "
+"strictly private and anonymous. The researchers will study the data from to "
+"the choices made without being able to link them to the identity of any "
+"participants. At the same time you will be paid by the administrative staff, "
+"who will have no access to the data concerning the choices that determined "
+"your earnings."
 msgstr ""
 "Siamo lieti di darti il benvenuto a questo esperimento. Ti preghiamo di "
 "leggere le seguenti istruzioni con attenzione. Durante tutto il corso "
@@ -130,10 +131,10 @@ msgstr ""
 "amministrativo che non potrà in alcun modo sapere quali siano le scelte che "
 "hanno determinato i vostri guadagni."
 
-#: views.py:39
+#: welcome_choice/views.py:40
 msgid "Please insert the correct key in both fields"
 msgstr "Inserisci il valore corretto in entrambi i campi"
 
-#: views.py:47
+#: welcome_choice/views.py:48
 msgid "Please check the number of the workstation you are sitting at"
 msgstr "Controlla di essere alla postazione corretta"
