Limature al testo di welcome e session.py

--- a/welcome_choice/locale/it/LC_MESSAGES/django.po
+++ b/welcome_choice/locale/it/LC_MESSAGES/django.po
@@ -115,7 +115,7 @@ msgstr ""
 "complessivo, ma verrà immediatamente donata online alla associazione. Ti "
 "sarà chiesto di firmare una ricevuta relativa al pagamento complessivo, "
 "compresa la donazione.</p><p>L’esperimento consiste di %(n)s diverse "
-"attività da svolgere al computer e di un breve questionario cartaceo finale. "
+"attività da svolgere al computer e di un (eventuale) breve questionario cartaceo finale. "
 "Le scelte effettuate durante una specifica attività non avranno alcuna "
 "influenza sugli esiti delle altre attività, precedenti o successive. I "
 "guadagni conseguiti in ogni attività saranno comunicati ad ogni partecipante "
