Modifiche al testo di marketinfo

--- a/marketInfo/locale/it/LC_MESSAGES/django.po
+++ b/marketInfo/locale/it/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgstr ""
 "Project-Id-Version: Otree_market\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2016-05-30 16:29+0200\n"
-"PO-Revision-Date: 2016-05-30 16:32+0100\n"
+"PO-Revision-Date: 2016-06-07 11:49+0100\n"
 "Last-Translator: \n"
 "Language-Team: \n"
 "Language: it\n"
@@ -64,11 +64,18 @@ msgid ""
 "following screen). Your new competitor will in any case be selected afresh "
 "at random. <br>  <br>"
 msgstr ""
-"Questa attività è identica alla prima attività. L'unica differenza è che "
-"ogni partecipante riceve una informazione riguardante il proprio rivale "
-"(nella prossima schermata).  Il nuovo rivale sarà in ogni caso di nuovo "
-"selezionato casualmente. Tutto il resto "
-"dell'attività rimane invariato. <br>  <br>"
+"Questa attività è identica alla prima attività (ma su soli 5 turni). L'unica "
+"differenza è che ogni partecipante riceve una informazione riguardante il "
+"proprio rivale. Secondo la definizione della Comunità Europea è un "
+"imprenditore sociale colui che nella sua attività ha come scopo principale "
+"il perseguimento e la massimizzazione di obiettivi sociali e ambientali "
+"garantendo al tempo stesso la sostenibilità economica dell'impresa. I "
+"partecipanti all'esperimento sono tutti imprenditori, ma solo alcuni sono "
+"definibili come imprenditori sociali, gli altri sono invece imprenditori "
+"tradizionali. Nella prossima schermata ciascuno verrà informato se sta per "
+"giocare con un imprenditore/imprenditrice sociale oppure tradizionale. Il "
+"nuovo rivale sarà in ogni caso di nuovo selezionato casualmente. Tutto il "
+"resto dell'attività rimane invariato. <br>  <br>"
 
 #: templates/marketInfo/Results.html:6
 msgid "Risultati di questa attivita'"
